Bug 1337910 - Notify observers from Gecko event queue; r=snorp a=gchang Call NotifyObservers from the Gecko event queue instead of the Android event queue, to better support Promises in notified JS code.

--HG--
extra : source : 06745caaa027d2734e5cd249902c8900edb6cba0